# src/company/dto/response.dto.ts
@@ -1,0 +1,8 @@
+import { Company } from '../entities';
+import { ApiExtraModels } from '@nestjs/swagger';
+
+@ApiExtraModels(Company)
+export class CompanyQueryResponseDto {
+  data: Company[];
+  count?: number;
+}
