# src/job/dto/response.dto.ts
@@ -1,0 +1,8 @@
+import { Job } from '../entities';
+import { ApiExtraModels } from '@nestjs/swagger';
+
+@ApiExtraModels(Job)
+export class JobQueryResponseDto {
+  data: Job[];
+  count?: number;
+}
