# src/person/dto/response.dto.ts
@@ -1,0 +1,8 @@
+import { Person } from '../entities';
+import { ApiExtraModels } from '@nestjs/swagger';
+
+@ApiExtraModels(Person)
+export class PersonQueryResponseDto {
+  data: Person[];
+  count?: number;
+}
